Sync change from remote theme: drop custom feed

--- a/_config.yml
+++ b/_config.yml
@@ -246,7 +246,7 @@ prose:
           help: "Check to publish post, uncheck to hide."
 
 plugins:
+  - jekyll-remote-theme
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-remote-theme
-
+  - jekyll-feed
