--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,19 @@
 # --- General options --- #
 
-# url is the full website URL
-# baseurl is the website's URL without the hostname
+# To spare yourself from trouble, just leave url and baseurl undefined,
+# GitHub can automatically set these properties accordingly for user
+# page and project page.
+#
+# Indeed you can still set the properties yourself, in that case don't
+# forget to change the username and projectname to YOUR username and project
 
-# If you are building a simple GitHub user page (https://username.github.io) then use these settings:
+# url is the website URL up to host name, without trailing slash
 #url: "https://username.github.io"
+
+# For GitHub user page, baseurl is empty string. Don't set to "/".
+# For GitHub project page, set it to project name with leading slash,
+# e.g. "/myproject". However, don't add trailing slash.
 #baseurl: ""
-
-# If you are building a GitHub project page then use these settings:
-url: "https://abelcheung.github.io/site-test"
-baseurl: "/site-test"
-
-# Of course don't forget to change the username and projectname to YOUR username and project
 
 # Use this Github repository as basis of remote theme
 remote_theme: abelcheung/beautiful-jekyll
@@ -57,7 +59,7 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
-navbar-img: "/assets/img/bgimage.png"
+#navbar-img: "/assets/img/bgimage.png"
 footer-img: "/assets/img/bgimage.png"
 # page-img: "/assets/img/bgimage.png"
 
@@ -96,7 +98,6 @@ social-network-links:
 share-links-active:
   twitter: true
   facebook: true
-  google: false
   linkedin: true
 
 # How to display the link to the website in the footer
